--- a/JavaScript.html
+++ b/JavaScript.html
@@ -18,6 +18,7 @@
                 </div>   
                 <hr id="hr2">
                     <ul>
+                            <div class="row center-nav">
                             <li><a href="Index.html">Home</a></li>
                             <li><a href="BankAccount.html">Safenet Consulting Problem in C#</a></li>
                             <li><a href="SourceControl.html">Source Control</a></li>
@@ -25,6 +26,7 @@
                             <li><a href="MVC.html">MVC and C#</a></li>
                             <li><a href="FinalProject.html">Final Project</a></li>
                             <li><a href="overall.html">Overall Reflection</a></li>
+                            </div>
                         </ul>
                         <div class="row">
                                 <div class="padding">
