--- a/SourceControl.html
+++ b/SourceControl.html
@@ -18,7 +18,7 @@
                 <hr id="hr2">
                     <ul>
                             <div class="row center-nav">
-                            <li><a href="Index.html">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li><a href="BankAccount.html">Safenet Consulting Problem in C#</a></li>
                             <li><a href="SourceControl.html">Source Control</a></li>
                             <li><a href="JavaScript.html">Javascript</a></li>
