Fix Index again

--- a/BankAccount.html
+++ b/BankAccount.html
@@ -17,7 +17,7 @@
                 </div>   
                 <hr id="hr2">
                     <ul>
-                            <li><a href="Index.html">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li><a href="BankAccount.html">Safenet Consulting Problem in C#</a></li>
                             <li><a href="SourceControl.html">Source Control</a></li>
                             <li><a href="JavaScript.html">Javascript</a></li>
